# scrubfs

./: .gitignore  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs
src/: cli.rs  config.rs  daemon.rs  fs.rs  main.rs  paths.rs  stripper.rs
