[package]
name = "scrubfs"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
ctrlc = { version = "3", features = ["termination"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
